
using UnityEngine;

public class AnimationString
{

    /*
     * Player
    */
    internal static readonly string isRunning = "isRunning";
    internal static readonly string isFlying = "isFlying";
    internal static readonly string isDead = "isDead";
    internal static readonly string isComplytelyDead = "isComplytelyDead";
    internal static readonly string isCombatMode = "isCombatMode";


    /*
     * Effect
    */
    internal static readonly string isOn = "isOn";
    internal static readonly string isFear = "isFear";
    internal static readonly string isRevive = "isRevive";

    internal static readonly string isAttackOne = "isAttackOne";
    internal static readonly string isAttackTwo = "isAttackTwo";
    internal static readonly string isAttacking_One = "isAttacking_One";
    internal static readonly string isAttacking_Two = "isAttacking_Two";


    internal static readonly string isStartMatch = "isStartMatch";


}
